package com.example.creational.abstractfactory.products;

public interface Chair {
    void sitOn();
}
