package com.example.creational.abstractfactory.products;

public interface CoffeeTable {
    void putCoffeeOn();
}
