package com.example.creational.abstractfactory.products;

public interface Sofa {
    void lieOn();
}
