package com.example.creational.abstractfactory.products.sofas;

import com.example.creational.abstractfactory.products.Sofa;

public class ModernSofa implements Sofa{
    public void lieOn() {
        System.out.println("Lying on a Modern sofa");
    }
}
